tests/parsing/smtlib/mcil/errors/246_check-system_bad_attribute_1.mcil
(check-system sys :reachabe ((q (r))) f)